fixed alignment of confirmation inputs, added client-side form validation errors

--- a/src/web/theme/components/user-registration.less
+++ b/src/web/theme/components/user-registration.less
@@ -23,8 +23,13 @@
         max-width: 350px;
     }
 
+    .email-error {
+        display: none;
+    }
+
     .confirmation-number {
         .form-control {
+            display: inline-block;
             width: 24.4%;
             max-width: 50px;
             text-align: center;
